--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:danasim2@illinois.edu">Contact me by email.</a></li>
-        		<li><a href="847-840-1401">Or phone.</a></li>
+        		<li><a href="mailto:danasim2@illinois.edu">Contact me by email</a></li>
+        		<a href="847-840-1401">Or phone at 847-840-1401</a>
 			</ul>
 		</footer>
 	</body>
