--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
 				<p>Student at <em>University of Illinois at Urbana-Champaign</em>. This is a place where I collect all my cool coding stuff. </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+		
+		<div class="blurb">
+			<p>Videogames made with <em>Unity Game Engine</em></p>
+			<footer>
+			<ul>
+				<li><a href="mailto:danasim2@illinois.edu">Test 1</a></li>
+				<li><a href="mailto:danasim2@illinois.edu">Test 2</a></li>
+			</ul>
+			</footer>
+    		</div><!-- /.blurb -->
+		
 		<footer>
     		<ul>
         		<li><a href="mailto:danasim2@illinois.edu">Contact me by email</a></li>
-        		<a href="847-840-1401">Or phone at 847-840-1401</a>
+        		<li> href="847-840-1401">Or phone at 847-840-1401</li>
 			</ul>
 		</footer>
 	</body>
