--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 		</div><!-- /.container -->
 		
 		<div class="blurb">
-			<p>Videogames made with <em>Unity Game Engine</em></p>
+			<p>Videogames made with <em>Unity Game Engine</em> through tutorials and polished with custom tweaks</p>
 			<footer>
 			<ul>
-				<li><a href="mailto:danasim2@illinois.edu">Test 1</a></li>
-				<li><a href="mailto:danasim2@illinois.edu">Test 2</a></li>
+				<li><a href="https://vixro.github.io/Roll-a-Ball-Web-2/">Roll-a-Ball</a></li>
+				<li><a href="https://vixro.github.io/Space-Shooter-Web-1/">Space Shooter</a></li>
+				<li><a href="https://vixro.github.io/Tanks-Web-1/">Tanks!</a></li>
 			</ul>
 			</footer>
     		</div><!-- /.blurb -->
 		
 		<footer>
     		<ul>
-        		<li><a href="mailto:danasim2@illinois.edu">Contact me by email</a></li>
-        		<li> href="847-840-1401">Or phone at 847-840-1401</li>
+        		<li>Contact me by <a href="mailto:danasim2@illinois.edu">email</a> or phone at 847-840-1401</li>
 			</ul>
 		</footer>
 	</body>
