--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Dana Sim's Home Site</h1>
-				<p>Student at <em>University of Illinois at Urbana-Champaign</em>. This is a place where I collect all my cool coding stuff. </p>
+				<p>Student at <em>University of Illinois at Urbana-Champaign</em>, marathon runner, and Pokémon Master. This is a place where I collect all my cool coding stuff. </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
 		<div class="blurb">
-			<p>Videogames made with <em>Unity Game Engine</em> through tutorials and polished with custom tweaks</p>
+			<p>Videogames made with <em>Unity Game Engine</em> through tutorials and polished with custom tweaks.</p>
 			<footer>
 			<ul>
 				<li><a href="https://vixro.github.io/Roll-a-Ball-Web-2/">Roll-a-Ball</a></li>
@@ -24,7 +24,8 @@
 		
 		<footer>
     		<ul>
-        		<li>Contact me by <a href="mailto:danasim2@illinois.edu">email</a> or phone at 847-840-1401</li>
+        		<p>Contact me by <a href="mailto:danasim2@illinois.edu">email</a> or phone at 847-840-1401</p>
+			<p>Here is <a href="https://drive.google.com/file/d/0B3-X0gi8Hy0jcWRqbkNzbm9yeU0/view?usp=sharing"> my resume</a></p>
 			</ul>
 		</footer>
 	</body>
