--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     		</div><!-- /.blurb -->
 		
 		<footer>
-    		<ul>
-        		<p>Contact me by <a href="mailto:danasim2@illinois.edu">email</a> or phone at 847-840-1401</p>
-			<p>Here is <a href="https://drive.google.com/file/d/0B3-X0gi8Hy0jcWRqbkNzbm9yeU0/view?usp=sharing"> my resume</a></p>
-			</ul>
+    		
+        		<p>You can contact me by <a href="mailto:danasim2@illinois.edu">email</a> or phone at 847-840-1401. \n
+				Here is <a href="https://drive.google.com/file/d/0B3-X0gi8Hy0jcWRqbkNzbm9yeU0/view?usp=sharing"> my resume</a></p>
+		
 		</footer>
 	</body>
 </html>
