--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 			</footer>
     		</div><!-- /.blurb -->
 		
+		
+		
 		<footer>
     		
-        		<p>You can contact me by <a href="mailto:danasim2@illinois.edu">email</a> or phone at 847-840-1401. \n
-				Here is <a href="https://drive.google.com/file/d/0B3-X0gi8Hy0jcWRqbkNzbm9yeU0/view?usp=sharing"> my resume</a></p>
-		
+        		<p><a href="https://drive.google.com/file/d/0B3-X0gi8Hy0jcWRqbkNzbm9yeU0/view?usp=sharing"> My resume</a>. You can contact me by <a href="mailto:danasim2@illinois.edu">email</a> or phone at 847-840-1401. \n</p>
+
 		</footer>
 	</body>
 </html>
