--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
+		<br>
+		
 		<div class="blurb">
 			<p>Videogames made with <em>Unity Game Engine</em> through tutorials and polished with custom tweaks.</p>
 			<footer>
@@ -22,12 +24,15 @@
 			</footer>
     		</div><!-- /.blurb -->
 		
-		
+		<br>
+		<br>
+		<p><a href="https://drive.google.com/file/d/0B3-X0gi8Hy0jcWRqbkNzbm9yeU0/view?usp=sharing"> My resume</a>. 
+				You can contact me by <a href="mailto:danasim2@illinois.edu">email</a> or phone at 847-840-1401.</p>
+		<br>
+		<hr>
 		
 		<footer>
-    		
-        		<p><a href="https://drive.google.com/file/d/0B3-X0gi8Hy0jcWRqbkNzbm9yeU0/view?usp=sharing"> My resume</a>. You can contact me by <a href="mailto:danasim2@illinois.edu">email</a> or phone at 847-840-1401. \n</p>
-
+			<p>&copy;Dana Sim 2017</p>
 		</footer>
 	</body>
 </html>
