--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Dana Sim's Home Site</h1>
-				<p>Student at <em>University of Illinois at Urbana-Champaign</em>, marathon runner, and Pokémon Master. This is a place where I collect all my cool coding stuff. </p>
+				<p>Student at <em>University of Illinois at Urbana-Champaign</em>, marathon runner, and Pokémon Master.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
@@ -24,11 +24,11 @@
 			</footer>
     		</div><!-- /.blurb -->
 		
-		<br>
+		
 		<br>
 		<p><a href="https://drive.google.com/file/d/0B3-X0gi8Hy0jcWRqbkNzbm9yeU0/view?usp=sharing"> My resume</a>. 
 				You can contact me by <a href="mailto:danasim2@illinois.edu">email</a> or phone at 847-840-1401.</p>
-		<br>
+	
 		<hr>
 		
 		<footer>
