--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Dana Sim's Home Site</h1>
-				<p>Student at <em>University of Illinois at Urbana-Champaign</em>, marathon runner, and Pokémon Master.</p>
+				<p>Student at <em>University of Illinois at Urbana-Champaign</em> majoring in <b>Engineering Physics</b>, marathon runner, and Pokémon Master.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
