--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     		<div class="blurb">
         		<h1>Dana Sim's Home Site</h1>
 				<p>Student at <em>University of Illinois at Urbana-Champaign</em> majoring in <b>Engineering Physics</b>, marathon runner, and Pokémon Master.</p>
-    		</div><!-- /.blurb -->
+    			
+			<img src="Me and Oysters 2.jpg">
+			
+		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
 		<br>
