--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         		<h1>Dana Sim's Home Site</h1>
 				<p>Student at <em>University of Illinois at Urbana-Champaign</em> majoring in <b>Engineering Physics</b>, marathon runner, and Pokémon Master.</p>
     			
-			<img src="Me and Oysters 2.jpg">
+			<img src="Me and Oysters 2.jpg" style="width:304px;height:228px;">
 			
 		</div><!-- /.blurb -->
 		</div><!-- /.container -->
