--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		
 		
 		<br>
-		<p><a href="https://drive.google.com/file/d/0B3-X0gi8Hy0jcWRqbkNzbm9yeU0/view?usp=sharing"> My resume</a>. 
+		<p><a href="https://drive.google.com/a/illinois.edu/file/d/0B3-X0gi8Hy0jdWtfdHVMQWJLX0k/view?usp=sharing"> My resume</a>. 
 				You can contact me by <a href="mailto:danasim2@illinois.edu">email</a> or phone at 847-840-1401.</p>
 	
 		<hr>
