--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		
 		
 		<br>
-		<p><a href="https://drive.google.com/a/illinois.edu/file/d/0B3-X0gi8Hy0jdWtfdHVMQWJLX0k/view?usp=sharing"> My resume</a>. 
-				You can contact me by <a href="mailto:danasim2@illinois.edu">email</a> or phone at 847-840-1401.</p>
+		<p><a href="https://drive.google.com/file/d/1dv9sUqTpdKtURsV-XzI0TDl3RbOgVoyw/view?usp=sharing"> My resume</a>. 
+				You can contact me by <a href="mailto:danasim2@illinois.edu">email</a> or by phone at 847-840-1401.</p>
 	
 		<hr>
 		
