Edit up projects.

--- a/Environment/mp3.html
+++ b/Environment/mp3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML> 
 <html lang="en"> 
 <head>
-<title>MP3</title>
+<title>Simple Environment</title>
 <meta charset="utf-8"> 
 </head>
 
@@ -188,7 +188,7 @@
 <script src="CubeMesh.js"></script>  
 <script src="HelloTeapot.js"></script>   
 <body onload="startup();">
- MP3 -- Rotating Teapot with Reflection -- danasim2<br><br>
+ A simple environment mapping example with a rotating teapot that can or cannot be reflective.<br><br>
  <canvas id="myGLCanvas" width="800" height="800"></canvas>
     <form id="input_form">
         <fieldset>
