--- a/Flight/mp2.html
+++ b/Flight/mp2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML> 
 <html lang="en"> 
 <head>
-<title>Hello Terrain </title>
+<title>Simple Terrain</title>
 <meta charset="utf-8"> 
 </head>
     
@@ -212,6 +212,7 @@
 <script src="Terrain.js"></script>  
 <script src="HelloTerrain.js"></script>   
 <body onload="startup();">
+    <p>A simple program implementing a diamond-square algorithm for terrain generation. Scroll to bottom for instructions on how to control the "plane".</p>
  <canvas id="myGLCanvas" width="800" height="800"></canvas>
     <form id="input_form">
         <fieldset>
