--- a/Particles/mp4.html
+++ b/Particles/mp4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<title>MP4</title>
+<title>Simple Particle</title>
 <meta charset="utf-8">
 </head>
 
@@ -134,7 +134,7 @@
 <script src="SphereMesh.js"></script>
 <script src="HelloParticles.js"></script>
 <body onload="startup();">
- MP4 -- A Simple Particle System -- danasim2<br>
+ A simple particle system. <br>
  <canvas id="myGLCanvas" width="800" height="800"></canvas>
     <form id="input_form">
         <fieldset>
