--- a/index.html
+++ b/index.html
@@ -113,21 +113,22 @@ lis.dropdown {
     <div class="container">
         <div class="blurb">
             <h1>Dana Song Sim</h1>
-            <p>Student at <em>University of Illinois at Urbana-Champaign</em> majoring in <b>Engineering Physics</b>, marathon runner, and Pokémon Master.</p>
+            <p>Student at <em>University of Illinois at Urbana-Champaign</em> majoring in <b>Engineering Physics</b> with minors in <b>Mathematics</b> and <b>Computer Science</b>. <br>
+            Also a marathon runner, avid video game player, and Pokémon master.</p>
     </div><!-- /.blurb -->
     </div><!-- /.container -->
 
-    <div style="margin-left:2%;height:300px;">
+    <div style="margin-left:1%;height:300px;">
     <img src="profile.jpg" style="margin-right:1%;padding:1px;width:200px;height:280px;" align="left">
 
     <br>
-    Please click the above tabs to see examples of my work! <br><br>
+    Please click the above tabs to see examples of my work! <br>NOTE: Some projects will require a little time to load on first-time browsers.<br><br>
         • Unity Games made with <em>Unity Game Engine</em> using tutorials and polished with custom tweaks. <br>
         • Interactive graphic projects from CS418 class at the University of Illinois at Urbana-Champaign. <br>
         • Physics projects and more <i>coming soon</i>!
     <br>
-    <p><a href="https://drive.google.com/file/d/1dv9sUqTpdKtURsV-XzI0TDl3RbOgVoyw/view?usp=sharing"> My resume</a>. 
-            You can contact me at <a href="mailto:danasim2@illinois.edu">danasim2@illinois.edu</a> or by phone at 847-840-1401.</p>
+    <p><a href="Dana%20Sim%20-%20Spring%202019.pdf" target="_blank"> My resume</a>. 
+            I can be reached via email at <a href="mailto:danasim2@illinois.edu">danasim2@illinois.edu</a> or by phone at 847-840-1401.</p>
     </div>
     <hr>
     
