--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ lis.dropdown {
             <h1>Dana Song Sim</h1>
             <p>Student at <em>University of Illinois at Urbana-Champaign</em> majoring in <b>Engineering Physics</b> with minors in <b>Mathematics</b> and <b>Computer Science</b>. <br>
                 Graduating December 2019. <br><br>
-            Also a marathon runner, avid video game player, and Pokémon master. You can find me on various platforms with the username <i>Vixro</i>.</p>
+            Also a marathon runner, avid video game player, and Pokémon master.</p>
     </div><!-- /.blurb -->
     </div><!-- /.container -->
 
