Edited in directions

--- a/Environment/mp3.html
+++ b/Environment/mp3.html
@@ -188,7 +188,7 @@
 <script src="CubeMesh.js"></script>  
 <script src="HelloTeapot.js"></script>   
 <body onload="startup();">
- A simple environment mapping example with a rotating teapot that can or cannot be reflective.<br><br>
+ A simple environment mapping example with a rotating teapot that can or cannot be reflective. See parameters at bottom.<br><br>
  <canvas id="myGLCanvas" width="800" height="800"></canvas>
     <form id="input_form">
         <fieldset>
