--- a/Particles/mp4.html
+++ b/Particles/mp4.html
@@ -134,7 +134,7 @@
 <script src="SphereMesh.js"></script>
 <script src="HelloParticles.js"></script>
 <body onload="startup();">
- A simple particle system. <br>
+ A simple particle system. See parameters at bottom. <br>
  <canvas id="myGLCanvas" width="800" height="800"></canvas>
     <form id="input_form">
         <fieldset>
