Updated some UI

--- a/Particles/mp4.html
+++ b/Particles/mp4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<title>Simple Particle</title>
+<title>MP4</title>
 <meta charset="utf-8">
 </head>
 
@@ -134,7 +134,7 @@
 <script src="SphereMesh.js"></script>
 <script src="HelloParticles.js"></script>
 <body onload="startup();">
- A simple particle system. See parameters at bottom. <br>
+ MP4 -- A Simple Particle System -- danasim2<br>
  <canvas id="myGLCanvas" width="800" height="800"></canvas>
     <form id="input_form">
         <fieldset>
@@ -149,7 +149,7 @@
             --Press "r" to reset to original parameters<br><br>
             <input type="number" name="sphereCount" id="sphereCount" value="10"/> Number of Particles <br>
             -- Press "p" to add more! Press "o" to remove.<br>
-            -- Click "t" to reset to 10 particles<br><br>
+            -- Click "c" to clear out all particles<br><br>
             <input type="number" name="drag" id="drag" value="1"/> Drag Value <br>
             -- Press "l" to decrease drag. Press "k" to increase.<br><br>
             <input id="random-color" type="checkbox" checked> Particles are random colors.<br>
