--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ lis.dropdown {
         • Interactive graphic projects from CS418 class at the University of Illinois at Urbana-Champaign. <br>
         • Physics projects and more <i>coming soon</i>!
     <br>
-    <p><a href="Dana%20Sim%20-%20Spring%202019.pdf" target="_blank"> My resume</a>.
+    <p><a href="Dana%20Sim%20-%20Fall%202019.pdf" target="_blank"> My resume</a>.
             I can be reached via email at <a href="mailto:danasim2@illinois.edu">danasim2@illinois.edu</a> or by phone at 847-840-1401.</p>
     </div>
     <hr>
